--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,6 @@ body{font-family:"微软雅黑";font-size:9pt}
 .ui-sf-sender-name{position:absolute;top:122px;left:84px;width:145px}
 .ui-sf-sender-addr{position:absolute;top:148px;left:38px}
 .ui-sf-sender-phone{position:absolute;top:179px;left:76px}
-.sf-remark {position: absolute;top: 350px;left: 400px;width: 304px;}
 
 .ui-st-recipient-name{position:absolute;top:120px;left:437px}
 .ui-st-recipient-addr{position:absolute;bottom:294px;left:418px}
@@ -79,14 +78,13 @@ body{font-family:"微软雅黑";font-size:9pt}
 .ui-st-sender-addr span{margin-right:40px}
 .ui-st-sender-detail{position:absolute;top:198px;left:0}
 .ui-st-sender-phone{position:absolute;top:225px;left:60px}
-.st-remark {position: absolute;top: 380px;left: 570px;width: 170px;}
+.ui-st-remark{position:absolute;top:280px;left:0;width:338px;text-align:left}
 
-.order-container {width: 920px;position: relative;height: 432px;padding: 50px 0;}
-.order-container .header-wrap {text-align: center;font-size: 18px;font-weight: bold;}
-.order-container .order-line {width: 880px;margin: 0 auto;}
-.order-container .header-line {width: 250px;padding: 5px 0;line-height: 1;margin: 0 auto;}
-.order-container .company-name {border-bottom: 1px dashed #000;margin-bottom: 2px;}
-.order-container .order-name {border-top: 1px dashed #000;}
+.order-container {width: 920px;position: relative;padding: 10px 0;}
+.order-container .header-wrap {text-align: center;font-size: 20px;}
+.order-container .header-line {width: 260px;padding: 5px 0;margin: 0 auto;}
+.order-container .company-name {border-bottom: 1px solid #000;margin-bottom: 2px;}
+.order-container .order-name {border-top: 1px solid #000;}
 .order-container .table-header {position: relative;margin: 10px auto 0;}
 .order-container .table-header-item {float: left;margin-bottom: 10px;}
 .order-container .table-header-item:nth-child(1) {width: 46%;}
@@ -95,10 +93,13 @@ body{font-family:"微软雅黑";font-size:9pt}
 .order-container .table-header-item:nth-child(4) {width: 46%;}
 .order-container .table-header-item:nth-child(5) {width: 34%;}
 .order-container .table-header-item:nth-child(6) {width: 20%;}
-.order-container .page-wrap {position: absolute;right: 90px;top: -20px;}
-table,tr,td,th {border: 1px solid #000;border-collapse:collapse;height: 30px;padding: 2px 0;}
+.order-container .page-wrap {position: absolute;right: 94px;top: -20px;}
+table,td,th {border: 1px solid #000;border-collapse:collapse;padding:2px;line-height: 1.2;font-weight: normal;}
+th {height: 20px;}
+td {height: 60px;}
+table tr:last-child td {height: 20px;}
 .order-container .table-info {text-align: center;}
-.order-container .table-bottom {margin-top: 10px;}
+.order-container .table-bottom {margin-top: 20px;}
 .order-container .table-bottom-title {padding-left: 10px;}
 .order-container .table-bottom-info {margin-top: 10px;}
 .order-container .page-total {text-align: left;text-indent: 40px;}
@@ -107,3 +108,5 @@ table,tr,td,th {border: 1px solid #000;border-collapse:collapse;height: 30px;pad
 .order-container .info-item:nth-child(2) {width: 28%;}
 .order-container .info-item:nth-child(3) {width: 25%;}
 .order-container .info-item:nth-child(4) {width: 32%;}
+.order-container .order-tips {position: absolute;width: 10px;right: -20px;bottom: 20px;}
+.order-container .order-tips-item {margin-bottom: 20px;text-align: left;line-height: 1.2;}
